add bootstrap html

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,11 +6,16 @@
 
         <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
         <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+        <style>
+        .bg-1{
+          background-color: #789
+        }
+        </style>
     </head>
 
     <body>
 
-        <div class="container-fluid">
+        <div class="container-fluid bg-1">
             <%= render "common/navbar" %>
             <%= render "common/flashes" %>
             <%= yield %>
