--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -1,4 +1,16 @@
-<footer class="container" style="margin-top: 100px;">
+<!-- /*<style>
+.bg-1{
+  padding-top: 15px;
+      padding-bottom: 15px;
+      border: 0;
+      border-radius: 0;
+      margin-bottom: 0;
+      font-size: 12px;
+      letter-spacing: 5px;
+      background-color: #999999
+}
+</style>*/ -->
+<footer class="container bg-1" style="margin-top: 0px; padding-top: 70px; padding-bottom: 70px; width: 100%;">
     <p class="text-center">Copyright ©2017 Rails101
         <br>Design by haoyujin
 
