--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -1,3 +1,17 @@
+
+<style>
+.navbar{
+  padding-top: 15px;
+      padding-bottom: 15px;
+      border: 0;
+      border-radius: 0;
+      margin-bottom: 0;
+      font-size: 12px;
+      letter-spacing: 5px;
+      background-color:inherit;
+}
+
+</style>
 <nav class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -9,7 +23,10 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <%= link_to("登入", '#') %>
+                    <%= link_to("登入", '#',) %>
+                </li>
+                <li>
+                    <%= link_to("浏览", '#') %>
                 </li>
             </ul>
         </div>
